Prototype drawing routes as polylines on map

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Google Maps JS-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCvi69wgFi4mcPe8bxCwi2DX443NEo0vQ&libraries=places" async defer></script>
+
     <title>React App</title>
   </head>
   <body>
