--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
     <!-- Google Maps JS-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCvi69wgFi4mcPe8bxCwi2DX443NEo0vQ&libraries=places" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCvi69wgFi4mcPe8bxCwi2DX443NEo0vQ&libraries=places"></script>
 
 
     <title>stopp.io</title>
