Add mdi icons and wrapper class

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
+    <!-- mdi icon pack -->
+    <link href="css/materialdesignicons.min.css" rel="stylesheet" type="text/css" />
+
     <!-- Google Maps JS-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCvi69wgFi4mcPe8bxCwi2DX443NEo0vQ&libraries=places"></script>
-
 
     <title>stopp.io</title>
   </head>
