Add favicon and update title

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Google Maps JS-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCvi69wgFi4mcPe8bxCwi2DX443NEo0vQ&libraries=places"></script>
 
-    <title>stopp.io</title>
+    <title>BusBoss</title>
   </head>
   <body>
     <div id="root"></div>
